fix sign up icons alignment

--- a/sign-up/sign-up-resp.css
+++ b/sign-up/sign-up-resp.css
@@ -15,23 +15,19 @@
   }
 
   .name-img {
-    top: 15px;
     right: 15px;
   }
 
   .pw-img {
     right: 15px;
-    top: 155px;
   }
 
   .confirm-pw-img {
     right: 15px;
-    top: 225px;
   }
 
   .mail-img {
     right: 15px;
-    top: 84px;
   }
 
   .join-header-logo {
@@ -48,7 +44,6 @@
   }
 
   .go-back-arrow {
-    top: 15px;
     left: -120px;
   }
 }
@@ -92,7 +87,6 @@
 
   .signup-inputs input {
     width: 270px;
-    height: 37px;
     font-size: 16px;
   }
 
@@ -132,7 +126,6 @@
 
   .signup-inputs input {
     width: 240px;
-    height: 37px;
     font-size: 16px;
   }
 
